--- a/package.json
+++ b/package.json
@@ -10,10 +10,33 @@
   },
   "dependencies": {
     "@next/font": "13.1.2",
-    "eslint": "8.32.0",
-    "eslint-config-next": "13.1.2",
-    "next": "13.1.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@shopify/polaris": "^9.23.1",
+    "@shopify/polaris-icons": "^6.7.0",
+    "@shopify/polaris-viz": "^7.11.1",
+    "agenda": "^5.0.0",
+    "axios": "^0.25.0",
+    "cheerio": "^1.0.0-rc.12",
+    "date-fns": "^2.29.2",
+    "date-fns-tz": "^1.2.2",
+    "dotenv": "^16.0.3",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.1.7",
+    "next": "^13.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.6.2",
+    "styled-components": "^5.3.6"
+  },
+  "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.2.1",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "12.0.8",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-testing-library": "^5.0.4",
+    "prettier": "^2.7.1"
   }
 }
